--- a/style.css
+++ b/style.css
@@ -36,25 +36,36 @@ header {
 
 button {
   font-size: 2.5vh;
-  padding: 1vw 2vw;
+  padding: .6vw 2vw;
   border-radius: 10px;
   border: 2px solid rgb(80, 79, 79);
 }
 
 .content {
   height: 100%;
-
+  align-items: flex-start;
   justify-content: center;
-  align-items: center;
+  margin: 3vw;
 }
 
-.add-book-card {
-  border: 2px solid black;
-  padding: 2vw;
-  border-radius: 20px;
-  flex-direction: column;
-  gap: 20px;
-  width: 250px;
+th {
+    min-width: 15vw;
+    font-size: 1.4vw;
+    padding: 1vw 0;
+    background-color: #cacaca;
+    
+}
+
+tr {
+    min-width: 15vw;
+    font-size: 1.2vw;
+    text-align: center;
+    vertical-align: middle;
+    background-color: #e6e0e0;
+}
+
+td {
+    padding: 1vw 0;
 }
 
 .add-book-title {
@@ -75,6 +86,56 @@ input {
   font-size: 1.3rem;
   border-radius: 5px;
   border: none;
-  background-color: rgb(230, 229, 229);
+  background-color: rgb(245, 243, 243);
   padding: 5px;
 }
+
+.page-mask {
+    background: rgba(0, 0, 0, 0.3);
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+}
+
+.add-book-card {
+    padding: 2vw;
+    border-radius: 20px;
+    flex-direction: column;
+    gap: 20px;
+    width: 250px;
+
+    position: fixed;
+    left: 35%;
+    right: 35%;
+    bottom: 31%;
+    top: 27%;
+    background-color: white;
+  }
+
+  #delete-button {
+    background-color: rgba(190, 3, 3, 0.795);
+    color: white;
+    border: none;
+    border-radius: 3px;
+    padding: .25vh 1vw;
+    font-size: 1rem;
+  }
+  
+  #Incomplete {
+    background-color: #d6d6d6;
+    border: none;
+    border-radius: 3px;
+    padding: .25vh 1vw;
+    font-size: 1rem;
+  }
+
+  #Complete {
+    background-color: rgba(30, 145, 15, 0.87);
+    color: white;
+    border: none;
+    border-radius: 3px;
+    padding: .25vh 1vw;
+    font-size: 1rem;
+  }
